# poker-vision-platform

./: .gitignore  .pre-commit-config.yaml  .replit  HAND_STATE_INTERFACE_SPEC_V2.md  ISSUES.md  MVP0-TechnicalNotes.md  README.md  SETUP.md  dependencies.txt  flashcards.txt  hand_state_parser.py  manage_services.py  orchestrate_pipeline.py  orchestrator.py  pipeline_tester.py  pyproject.toml  replit.md
alright-click/: README.md  ok_button_detector.py  test-alright.html
alright-click/templates/: ok_button_template.py
poker-vision-action-executor/: README.md  api.py  bet_entry.py  config.yaml  dump_window_controls.py  executor.py  models.py  poker_window.py  pyproject.toml
poker-vision-action-executor/test_harness/: harness.py  test_harness_integration.py
poker-vision-action-executor/tests/: test_api.py  test_bet_entry.py  test_executor.py  test_poker_window.py
poker-vision-alright-click/: config.py  gui.py  install.py  main.py  mouse_controller.py  ok_button_detector.py  pyproject.toml  test_dialog.py
poker-vision-alright-click/templates/: ok_button_template.py
poker-vision-auto-annotator/: README.md  auto_annotate.py  auto_annotate_config.yaml  upload_to_roboflow.py
poker-vision-auto-annotator/tests/: test_auto_annotate.py  test_upload_to_roboflow.py
poker-vision-card-classifier/: Design-Implementation-Discussion.md  README.md  api.py  augment.py  evaluate.py  pyproject.toml  test_api_batch.py  train.py
poker-vision-card-labeller/: README.md  audit.py  labeller.py  labels.csv  pyproject.toml
poker-vision-card-snipper/: .pre-commit-config.yaml  README.md  api.py  batch.py  card_snipper.py  pyproject.toml  requirements.txt  run.py
poker-vision-decision-engine/: api.py  mvp-specification.md  pyproject.toml  pyrightconfig.json
poker-vision-decision-engine/decision_engine/: __init__.py  controller.py  hand_eval.py  models.py  preflop.py  utils.py
poker-vision-decision-engine/tests/: test_controller.py  test_hand_eval.py  test_mvp_acceptance.py  test_preflop.py
poker-vision-detection-enricher/: README.md  api.py  audit_ocr.py  detection_enricher.py  ocr_module.py  pyproject.toml  spatial_reasoning.py  test_api_detection_enricher.py  test_detection_enricher.py  test_ocr_module.py  test_spatial_reasoning.py
poker-vision-hand-state-parser/: README.md  api.py  config.yaml  hand_state_parser.py  pyproject.toml
poker-vision-hand-state-parser/tests/: test_api.py  test_hand_state_parser.py
poker-vision-object-detector/: .env.example  .gitignore  README.md  detect_config.yaml  pyproject.toml
poker-vision-screen-monitor/: README.md  app.py  check_state.py  config.py  config_checker.py  external_integration_demo.py  image_size_calculator.py  integration_test.py  main.py  outbound_integration_demo.py  pyproject.toml  quick_webhook_test.py  screen_capture.py  test_screen_capture.py  test_with_upload.py  web_interface_test.py  webhook_debug.py  webhook_receiver_demo.py  webhook_troubleshoot.py
poker-vision-screen-monitor/static/css/: custom.css
poker-vision-screen-monitor/static/js/: monitor.js
poker-vision-screen-monitor/templates/: index.html
tests/: README.md  conftest.py  test_hand_state_parser.py  test_orchestrator.py  test_pipeline_integration.py  test_preflop_scenario_manifest.py
tests/_legacy_non_e2e/: README.md  (+1 more)
(+59 files in other folders)
