[project]
name = "poker-vision-action-executor"
version = "0.1.0"
description = "Enacts poker decisions against the live client window using the Windows UI API"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "pyautogui>=0.9.54",
    "pyyaml>=6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: requires a visible desktop and real Windows UI automation",
]
