[project]
name = "poker-vision-detection-enricher"
version = "0.1.0"
description = "Detection enricher module for routing detections to classification, OCR, and spatial reasoning"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "uvicorn[standard]>=0.29.0",
]

[tool.uv]
package = false
