[project]
name = "poker-vision-screen-monitor"
version = "0.1.0"
description = "Screen monitoring and capture module for poker vision"
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.0.0",
    "Pillow>=9.0.0",
    "mss>=6.1.0",
    "pyautogui>=0.9.50",
    "requests>=2.25.0",
    "gunicorn>=20.1.0",
    "email-validator>=1.1.0",
    "Flask-SQLAlchemy>=3.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.uv]
package = false
